tests/e2e/mutation_whitespace3.error
Error: syntax error in story at line 1

1|    (http fetch url:diff_url) split by: "\n"
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0148: Service expected but inline service found.
