tests/e2e/mutation_whitespace3.story
(http fetch url:diff_url) split by: "\n"
